--- a/first_steps_with_tensor_flow.ipynb
+++ b/first_steps_with_tensor_flow.ipynb
@@ -1077,7 +1077,11 @@
       "metadata": {
         "id": "SjdQQCduZ7BV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        },
+        "outputId": "ce4d6c03-a6c0-4b54-e30a-6705fd688f95"
       },
       "cell_type": "code",
       "source": [
@@ -1089,7 +1093,19 @@
         ")"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Training model...\n",
+            "RMSE (on training data):\n",
+            "  period 00 : 225.63\n",
+            "  period 01 : 214.62\n",
+            "  period 02 : 205.24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
